--- a/src/components/registerForm/registerForm.module.scss
+++ b/src/components/registerForm/registerForm.module.scss
@@ -1,36 +1,16 @@
 .container {
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
+width: 100%;
+max-width: 500px;
+margin: 0 auto;
+padding: 0 40px 40px 40px;}
   
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
-  
-.error {
-    color: red;
-    font-size: 14px;
-}
-  
-.link {
-    margin-top: 10px;
-    text-align: center;
-  
-    a {
-      color: #0078be;
-      text-decoration: none;
-  
-      &:hover {
-        text-decoration: underline;
-      }
-    }
+.submitButton{
+  display: flex;
+  justify-content: space-around;
 }
   
