--- a/src/pages/authorization/authorization.module.scss
+++ b/src/pages/authorization/authorization.module.scss
@@ -2,89 +2,97 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    height: 100vh;
-    background: #f5f5f5;
-  }
+    height: calc(100vh - 80px);
+    position: relative; 
+    overflow: hidden; 
+    z-index: 1;
+}
   
-  .leftSide {
+.leftSide {
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
+    padding-top: 4rem;
+}
   
-  .tabs {
+.tabs {
     display: flex;
     gap: 16px;
     justify-content: center;
-  }
+    margin-left: 5rem;
+}
   
-  .tab {
+.tab {
     font-size: 20px;
     color: #aaa;
     border: none;
     background: none;
     cursor: pointer;
     position: relative;
-  }
+}
   
-  .tab:hover {
+.tab:hover {
     color: #0078be;
-  }
+}
   
-  .active {
+.active {
     color: #0078be;
     font-weight: bold;
-  }
+}
   
-  .active::after {
-    content: '';
-    position: absolute;
-    bottom: -4px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(to right, #00a99d, #0078be);
-  }
   
-  .form {
+.form {
     margin-top: 24px;
+}
+  
+
+.rightSideContent {
+    z-index: 4;
+    margin-top: 10vh;
+
   }
   
+  .circle {
+    position: absolute;
+    z-index: 0;
+  }
+  
+  .circle1 {
+    width: 60vw;
+    height: 100vh;
+    top: 0;
+    right: -50%;
+    border-radius: 50%;
+    background-color: #C4EBE4;
+    z-index: 1;
+  }
+  
+  .circle3 {
+    width: 60vw;
+    height: 100vh;
+    top: 0;
+    right: -70%;
+    border-radius: 50%;
+    background-color: #76D0C2;
+    z-index: 3;
+  }
+  .circle2 {
+    width: 60vw;
+    height: 100vh;
+    top: 0;
+    right: -60%;
+    border-radius: 50%;
+    background-color: #99DDD0;
+    z-index: 2;
+  }
   .rightSide {
+    height: 100%;
     width: 50%;
     position: relative;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(to right, #00a99d, #0078be);
-    height: 100%;
-    // clip-path: polygon(100% 0, 100% 100%, 0 100%, 40% 0);
-    color: white;
-  }
-  
-  .semicircles {
-    position: absolute;
-    border-radius: 50%;
-    opacity: 0.2;
-  }
-  
-  .semicircle1 {
-    width: 300px;
-    height: 300px;
-    background: white;
-    top: 20%;
-    left: -50px;
-  }
-  
-  .semicircle2 {
-    width: 200px;
-    height: 200px;
-    background: white;
-    bottom: 20%;
-    right: -50px;
-  }
-  
+    justify-content: flex-end;
+    align-items:center;
+    overflow: hidden;
+}
