--- a/src/shared/ui/header/style.module.scss
+++ b/src/shared/ui/header/style.module.scss
@@ -5,6 +5,8 @@
     padding: 5px;
     position: relative;
     z-index: 5;
+    background-color: #76D0C2;
+
 }
   
 .nav {
@@ -12,16 +14,95 @@
     flex-grow: 1;
     display: flex;
     gap: 32px;
+    flex-grow: 1;
+
 }
   
 .navLink {
     font-size: 20px;
     text-decoration: none;
-    color: #3E7D82;
     transition: color 0.2s;
+    color: white;
 }
 
-  
+
+
+.authLink {
+    margin-left: auto;
+    font-size: 20px;
+    margin-right: 3%;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+.userMenu {
+    position: relative;
+}
+.userMenuButton {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+
+.dropdownMenu {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background: #C4EBE4;
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    //padding: 10px 0;
+}
+
+.dropdownItem {
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    padding: 10px 0px 10px 10px;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.2s;
+
+    &:hover {
+        background-color: #f5f5f5;
+        cursor: pointer;
+    }
+
+    svg {
+        margin-right: 10px;
+        transition: fill 0.2s;
+        flex-shrink: 0;
+    }
+}
+.logoutItem {
+    border: none;
+    font-size: 16px;
+    padding: 10px 0px 10px 10px;
+    background-color: #C4EBE4;
+    color: #d9534f;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 0.2s, color 0.2s;
+
+    &:hover {
+        background-color: #f5f5f5;
+        cursor: pointer;
+    }
+
+    svg {
+        margin-right: 10px;
+        transition: fill 0.2s;
+        flex-shrink: 0;
+    }
+}
+
 .languageSwitcher {
     display: flex;
     gap: 16px;
@@ -34,7 +115,7 @@
         cursor: pointer;
         transition: background-color 0.2s, color 0.2s;
         color: #76D0C2;
-  
+
         &.active {
             background-color: #00a99d;
             color: #fff;
