--- a/src/components/registerForm/registerForm.module.scss
+++ b/src/components/registerForm/registerForm.module.scss
@@ -1,8 +1,12 @@
 .container {
-width: 100%;
-max-width: 500px;
-margin: 0 auto;
-padding: 0 40px 40px 40px;}
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 0 40px 40px 40px;
+  @media (max-width: 768px) {
+    padding: 0;
+  }
+}
   
 .form {
   display: flex;
