--- a/src/pages/authorization/authorization.module.scss
+++ b/src/pages/authorization/authorization.module.scss
@@ -119,6 +119,9 @@
   justify-content: flex-end;
   align-items: center;
   overflow: hidden;
+  @media (max-width: 768px) {
+    display: none;
+  }
 
 }
 
