--- a/src/shared/ui/popup/Popup.module.scss
+++ b/src/shared/ui/popup/Popup.module.scss
@@ -20,3 +20,20 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   position: relative;
 }
+.small {
+  max-width: 300px;
+  width: 90%;
+  padding: 15px;
+}
+
+.medium {
+  max-width: 500px;
+  width: 90%;
+  padding: 20px;
+}
+
+.large {
+  max-width: 800px;
+  width: 90%;
+  padding: 30px;
+}
