--- a/src/components/sharePopup/SharePopup.module.scss
+++ b/src/components/sharePopup/SharePopup.module.scss
@@ -1,4 +1,5 @@
 .container {
+  top: 30px;
   background: #C4EBE4;
   padding: 20px;
   border-radius: 20px;
@@ -134,7 +135,9 @@
   }
 
   .socialIcons {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 10px;
   }
 
@@ -148,7 +151,21 @@
   }
 
   .socialButton {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    padding: 10px;
     font-size: 20px;
+    width: 200px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+  .socialButton svg {
+    width: 50px;
+    height: 50px;
   }
 
   .footerText {
