--- a/src/shared/ui/input/input.module.scss
+++ b/src/shared/ui/input/input.module.scss
@@ -7,8 +7,10 @@
     padding: 10px 20px;
     margin-bottom: 16px;
     transition: box-shadow 0.3s ease;
-  
-  }
+    background-color: white;
+
+
+}
   
 .input {
     margin-left: 5%;
