--- a/src/components/sharePopup/SharePopup.module.scss
+++ b/src/components/sharePopup/SharePopup.module.scss
@@ -1,14 +1,28 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
 .container {
-  top: 30px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: #C4EBE4;
-  padding: 20px;
+  padding: 25px;
   border-radius: 20px;
-  max-width: 677px;
-  margin: auto;
+  width: 550px;
+  max-width: 90%;
   text-align: center;
-  position: relative;
-  font-family: 'Montserrat', sans-serif;
-  box-sizing: border-box;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
 }
 
 .backButton {
