--- a/src/components/publicationCard/styles.module.scss
+++ b/src/components/publicationCard/styles.module.scss
@@ -30,7 +30,19 @@
     flex-direction: column;
     justify-content: space-between;
     color: #fff;
-    padding: 10px;
+    padding: 3px 10px 10px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 50px; // Регулируй высоту по необходимости
+      background: linear-gradient(to bottom, rgba(217, 217, 217, 0.6), rgba(115, 115, 115, 0));
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+    }
 
     .topInfo {
       display: flex;
@@ -41,10 +53,7 @@
         display: flex;
         align-items: center;
         gap: 5px;
-
-        .avatar {
-          font-size: 20px;
-        }
+        font-size: 11px;
       }
 
       .favorite {
@@ -71,12 +80,12 @@
     }
 
     .category {
-      background: rgba(255, 255, 255, 0.8);
+      background: #DCFDE8;
       padding: 4px 8px;
-      border-radius: 12px;
-      color: #333;
+      border-radius: 10px;
+      color: #17A34A;
       align-self: flex-start;
-      font-size: 12px;
+      font-size: 11px;
     }
   }
 
@@ -149,3 +158,31 @@
 .viewSpan{
   align-items: flex-start;
 }
+.favoriteButton {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  width: 36px;
+  height: 36px;
+  background-color: white;
+  border-radius: 50%;
+  z-index: 10;
+  pointer-events: auto;
+
+}
+
+.Circle {
+  width: 36px;
+  height: 36px;
+  background-color: #DCFDE8;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+}
+
