--- a/src/pages/search_page/styles.module.scss
+++ b/src/pages/search_page/styles.module.scss
@@ -8,9 +8,10 @@
   background-position: center;
   background-repeat: no-repeat;
   padding: 0 5vw;
-  min-height: 86vh;
+  min-height: calc(100vh - 80px);
   position: relative;
-
+  background-attachment: fixed;
+  background-color: #76D0C2;
   &::before {
     content: "";
     position: absolute;
@@ -84,15 +85,23 @@ label {
     margin-bottom: 7px;
     display: flex;
   justify-content: flex-start;
+  @media (max-width: 768px) {
+    margin-left: 0;
+    justify-content: center;
+  }
 }
 .dateFilter,
-.viewsFilter,
 .amountFilter {
     flex: 1;
     min-width: 250px;
     display: flex;
     flex-direction: row;
   gap: 15px;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .applyFiltersBtn {
@@ -120,6 +129,10 @@ label {
   transition: border-color 0.3s;
   width: 355px;
   margin-left: 2rem;
+  @media (max-width: 768px) {
+    margin-left: 0;
+    width: 80%
+  }
 
   &:focus {
     border-color: #76d0c2;
@@ -141,6 +154,11 @@ label {
   margin-bottom: 15px;
   padding: 10px 0;
   width: 100%;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .sortLabel {
@@ -148,6 +166,9 @@ label {
   font-size: 14px;
   font-weight: bold;
   color: #333;
+  @media (max-width: 768px) {
+    margin-left: 40%;
+  }
 }
 
 .sortSelect {
@@ -172,3 +193,4 @@ label {
   justify-content: center;
   gap: 20px;
 }
+
