--- a/src/components/fundraisingCard/fundraisingCard.module.scss
+++ b/src/components/fundraisingCard/fundraisingCard.module.scss
@@ -70,3 +70,20 @@
   background: #D9534F;
   color: white;
 }
+
+.donateButton {
+  background: #17A34A;
+  color: white;
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 12px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.donateButton:hover {
+  background: #14963E;
+}
