--- a/src/components/profileEditPopup/ProfileEditPopup.module.scss
+++ b/src/components/profileEditPopup/ProfileEditPopup.module.scss
@@ -79,6 +79,13 @@
   border: 4px solid #ddd;
 }
 
+.uploading {
+  display: flex;
+  justify-content: center;
+  margin-right: 35px;
+  margin-top: 10px;
+}
+
 .avatarLabel {
   font-size: 14px;
   cursor: pointer;
@@ -162,7 +169,7 @@
 }
 
 .footer {
-  position: sticky;
+  //position: sticky;
   bottom: 0;
   padding: 15px;
   display: flex;
@@ -191,5 +198,9 @@
   .submitButton {
     position: static;
     margin-top: 10px;
+  }
+
+  .uploading {
+    margin-right: 5px;
   }
 }
