search, main, donation finished

--- a/src/pages/mainPage/styles.module.scss
+++ b/src/pages/mainPage/styles.module.scss
@@ -1,6 +1,9 @@
 .highSection{
   display: flex;
   flex-direction: row;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 .container{
   margin-right: 10px;
