--- a/src/components/bannerWithStatistics/styles.module.scss
+++ b/src/components/bannerWithStatistics/styles.module.scss
@@ -4,6 +4,9 @@
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   width: 400px;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .title {
