--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 12px;
-  margin-top: 20px;
 }
 
 .category {
@@ -11,6 +10,7 @@
   align-items: center;
   justify-content: center;
   background: white;
+  color: #1a1a1a;
   border-radius: 20px;
   font-size: 16px;
   font-family: "Montserrat", sans-serif;
