--- a/src/components/photoGallery/styles.module.scss
+++ b/src/components/photoGallery/styles.module.scss
@@ -1,10 +1,13 @@
 .banner {
   position: relative;
   width: 100%;
-  max-width: 800px;
+  //max-width: 800px;
   margin: 20px auto;
   border-radius: 15px;
   overflow: hidden;
+  @media (max-width: 768px) {
+    height: 250px;
+  }
 }
 
 .image {
