--- a/src/components/donationsPopup/donationPopup.module.scss
+++ b/src/components/donationsPopup/donationPopup.module.scss
@@ -15,11 +15,16 @@
   position: relative;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
   width: 900px;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 .highsection{
   display: flex;
   gap: 40px;
   margin-top: -20px;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .close {
@@ -34,6 +39,9 @@
 }
 .donationAmount{
   width: 70%;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 h2 {
   font-size: 24px;
