--- a/src/pages/profile/ProfilePage.module.scss
+++ b/src/pages/profile/ProfilePage.module.scss
@@ -205,6 +205,42 @@
   min-height: 420px;
 }
 
+.tabButtons {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.tab {
+  background: none;
+  border: 2px solid #49C2A7;
+  color: #49C2A7;
+  padding: 10px 28px;
+  border-radius: 50px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  font-size: 16px;
+  white-space: nowrap;
+}
+
+.tab:hover {
+  background-color: #49C2A7;
+  color: white;
+}
+
+.activeTab {
+  background-color: #49C2A7;
+  color: white;
+  border: 2px solid #49C2A7;
+  border-radius: 50px;
+  padding: 10px 28px;
+  font-size: 16px;
+  white-space: nowrap;
+}
+
 @media (max-width: 768px) {
   .profileContainer {
     width: 100%;
@@ -350,4 +386,18 @@
     max-width: 400px;
     margin-bottom: 20px;
   }
+
+  .tabButtons {
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+
+  .tab,
+  .activeTab {
+    font-size: 15px;
+    padding: 8px 20px;
+  }
+
 }
